@@ -3,6 +3,10 @@
 	* using CDI library version 1.6.2
 	* Version 1.6.2 released
 
+2013-10-18  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
+
+	* gridarea: replace cell_area_tri() by huiliers_area()
+
 2013-10-06  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
 
 	* gridarea: numeric inaccuracy for triangles located directly on the pole (bug fix)
